hphp/hack/test/typecheck/reactive/rx_if_implements11.php.exp
File "rx_if_implements11.php", line 7, characters 5-8:
Multiple <<__Rx>>, <<__RxLocal>> or <<__RxShallow>> annotations are not allowed. (NastCheck[3061])
